src/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Category__c</fullName>
        <label>Aircraft Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comfort &amp; Aesthetics</fullName>
                </value>
                <value>
                    <fullName>WIFI</fullName>
                </value>
                <value>
                    <fullName>Cleanliness</fullName>
                </value>
                <value>
                    <fullName>Amenities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Comment__c</fullName>
        <label>Aircraft Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aircraft_Score__c</fullName>
        <label>Aircraft Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Unacceptable</fullName>
                </value>
                <value>
                    <fullName>2 - Normal</fullName>
                </value>
                <value>
                    <fullName>3 - Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Category__c</fullName>
        <label>Broker Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clear Communication</fullName>
                </value>
                <value>
                    <fullName>Contingency Planning</fullName>
                </value>
                <value>
                    <fullName>Client Service</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Teamwork with AvP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Comment__c</fullName>
        <label>Broker Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Broker_Contact_Name__c</fullName>
        <label>Broker Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Feedbacks (Broker Name)</relationshipLabel>
        <relationshipName>Feedbacks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Score__c</fullName>
        <label>Broker Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Unacceptable</fullName>
                </value>
                <value>
                    <fullName>2 - Normal</fullName>
                </value>
                <value>
                    <fullName>3 - Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Crew_Category__c</fullName>
        <label>Crew Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friendliness</fullName>
                </value>
                <value>
                    <fullName>Service Level</fullName>
                </value>
                <value>
                    <fullName>Attire</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crew_Comment__c</fullName>
        <label>Crew Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Crew_Name__c</fullName>
        <label>Crew Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crew_Score__c</fullName>
        <label>Crew Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Unacceptable</fullName>
                </value>
                <value>
                    <fullName>2 - Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3 - Normal</fullName>
                </value>
                <value>
                    <fullName>4 - Above the bar</fullName>
                </value>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Date_Time__c</fullName>
        <label>Feedback Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Internal_External__c</fullName>
        <label>Internal/External</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leg</label>
        <referenceTo>Leg__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operator_Category__c</fullName>
        <label>Operator Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clear Communication</fullName>
                </value>
                <value>
                    <fullName>Contingency Planning</fullName>
                </value>
                <value>
                    <fullName>Client Service</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Teamwork with AvP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator_Comment__c</fullName>
        <label>Operator Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operator_Contact_Name__c</fullName>
        <label>Operator Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Feedbacks (Operator Name)</relationshipLabel>
        <relationshipName>Feedbacks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operator_Score__c</fullName>
        <label>Operator Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Unacceptable</fullName>
                </value>
                <value>
                    <fullName>2 - Normal</fullName>
                </value>
                <value>
                    <fullName>3 - Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <label>Other Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Name__c</fullName>
        <label>Other Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Score__c</fullName>
        <label>Other Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Unacceptable</fullName>
                </value>
                <value>
                    <fullName>3 - Normal</fullName>
                </value>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trip_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trip Manager #</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Internal_External__c</columns>
        <columns>Account_Name2__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Operator_Name__c</columns>
        <columns>Operator_Score__c</columns>
        <columns>Broker_Name__c</columns>
        <columns>Broker_Score__c</columns>
        <columns>Aircraft__c</columns>
        <columns>Aircraft_Score__c</columns>
        <columns>Crew_Name__c</columns>
        <columns>Crew_Score__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>